style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');

body {
    margin: 0;
}
button:hover {
    cursor: pointer;
}

/* Custom Classes */

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Hero */
.hero {
    height: 20vw;
    background-color: #00b300;
}
.hero-text {
    font-size: 100px;
    font-family: "Kaushan Script", cursive;
}

.main-wrapper {
    background-image: url('img/background.jpg');
}


/* Output */

.print-output {
    width: 30vw;
    display: inline-block;
    align-items: right;
    justify-content: right;
    font-family: "Orbitron", sans-serif;
    font-size: 6vw;
    border: 1px solid #aaa;
    background-color: #d9d9d9;
    overflow: hidden;
    
    margin: 2vw 0 0 3.5vw;
}


/* Input Buttons */

.input-button {
    width: 6vw;
    height: 5vw;
    font-size: 2.5vw;
    margin: 0 1vw 2vw 1vw;
    border: 0px solid transparent;
    border-radius: 4px;
}
.input-button:hover {
    background-color: #bfbfbf;
}
.method-button {
    width: 6vw;
    height: 5vw;
    font-size: 2.5vw;
    margin: 0 1vw 2vw 1vw;
    background-color: #264d73;
    color: #fff;
    border: 0px solid transparent;
    border-radius: 4px;
}

.method-button:hover {
    background-color: #3973ac;
}
.reset-button {
    background-color: #ff9900;
    font-size: 2.5vw;
    color: #fff;
}
.reset-button:hover {
    background-color: #cc7a00;
}

/* Calculator */

.calc-wrapper {
    display: inline-block;
    width: 37vw;
    background-color: #aaa;
    border: 0px solid #000;
    border-radius: 15px;
    margin-top: 2vw;
    margin-bottom: 2vw;
    box-shadow: 5px 5px 5px #595959;
}
.button-row {
    display: inline-block;
    margin-left: 1.8vw;
}
.output-wrapper {
    border-bottom: 2px solid #8c8c8c;
}
#printValueOne {
    margin-left: 1vw;
}

